// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password should allow for a custom visibility icon node or null 1`] = `
<button
  aria-label="Show password"
  aria-pressed="false"
  class="rmd-button rmd-button--icon rmd-password__toggle"
  id="password-password-toggle"
  type="button"
>
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Password should allow for a custom visibility icon node or null 2`] = `
<button
  aria-label="Show password"
  aria-pressed="false"
  class="rmd-button rmd-button--icon rmd-password__toggle"
  id="password-password-toggle"
  type="button"
>
  <i
    aria-hidden="true"
    class="rmd-icon rmd-icon--font material-icons"
    id="visibility-icon"
  />
  <span
    class="rmd-ripple-container"
  />
</button>
`;

exports[`Password should allow the visibilityIcon to be an object for visible and invisible states 1`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--outline-right rmd-password rmd-password--offset"
  >
    <input
      class="rmd-text-field rmd-password__input rmd-password__input--offset"
      id="password"
      type="password"
    />
    <button
      aria-label="Show password"
      aria-pressed="false"
      class="rmd-button rmd-button--icon rmd-password__toggle"
      id="password-password-toggle"
      type="button"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
        id="invisible-icon"
      >
        visibility_off
      </i>
      <span
        class="rmd-ripple-container"
      />
    </button>
  </div>
</div>
`;

exports[`Password should allow the visibilityIcon to be an object for visible and invisible states 2`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--outline-right rmd-password rmd-password--offset"
  >
    <input
      class="rmd-text-field rmd-password__input rmd-password__input--offset"
      id="password"
      type="text"
    />
    <button
      aria-label="Show password"
      aria-pressed="true"
      class="rmd-button rmd-button--icon rmd-password__toggle"
      id="password-password-toggle"
      type="button"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
        id="visible-icon"
      >
        visibility_on
      </i>
      <span
        class="rmd-ripple-container"
      >
        <span
          class="rmd-ripple"
          style="left: 0px; top: 0px; height: 0px; width: 0px;"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`Password should not render the password toggle button if the disableVisibility prop is enabled 1`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--outline-right rmd-password rmd-password--offset"
  >
    <input
      class="rmd-text-field rmd-password__input rmd-password__input--offset"
      id="password"
      type="password"
    />
    <button
      aria-label="Show password"
      aria-pressed="false"
      class="rmd-button rmd-button--icon rmd-password__toggle"
      id="password-password-toggle"
      type="button"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        remove_red_eye
      </i>
      <span
        class="rmd-ripple-container"
      />
    </button>
  </div>
</div>
`;

exports[`Password should not render the password toggle button if the disableVisibility prop is enabled 2`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-password"
  >
    <input
      class="rmd-text-field rmd-password__input"
      id="password"
      type="password"
    />
  </div>
</div>
`;

exports[`Password should render correctly 1`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--outline-right rmd-password rmd-password--offset"
  >
    <input
      class="rmd-text-field rmd-password__input rmd-password__input--offset"
      id="password"
      type="password"
    />
    <button
      aria-label="Show password"
      aria-pressed="false"
      class="rmd-button rmd-button--icon rmd-password__toggle"
      id="password-password-toggle"
      type="button"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        remove_red_eye
      </i>
      <span
        class="rmd-ripple-container"
      />
    </button>
  </div>
</div>
`;

exports[`Password should render correctly 2`] = `
<div>
  <div
    class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-password rmd-password--offset"
  >
    <label
      class="rmd-label rmd-floating-label"
      for="password"
    >
      Password
    </label>
    <input
      class="rmd-text-field rmd-text-field--floating rmd-password__input rmd-password__input--offset"
      id="password"
      placeholder="Password..."
      type="password"
    />
    <button
      aria-label="Show password"
      aria-pressed="false"
      class="rmd-button rmd-button--icon rmd-password__toggle"
      id="password-password-toggle"
      type="button"
    >
      <i
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons"
      >
        remove_red_eye
      </i>
      <span
        class="rmd-ripple-container"
      />
    </button>
  </div>
</div>
`;

exports[`Password should switch to a text input when the visibility button is clicked 1`] = `
<input
  class="rmd-text-field rmd-text-field--floating rmd-password__input rmd-password__input--offset"
  id="password"
  type="password"
/>
`;

exports[`Password should switch to a text input when the visibility button is clicked 2`] = `
<input
  class="rmd-text-field rmd-text-field--floating rmd-password__input rmd-password__input--offset"
  id="password"
  type="text"
/>
`;

exports[`Password should switch to a text input when the visibility button is clicked 3`] = `
<input
  class="rmd-text-field rmd-text-field--floating rmd-password__input rmd-password__input--offset"
  id="password"
  type="password"
/>
`;
